--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -163,6 +163,7 @@
         
         <activity android:name="com.photowall.ui.explore.HotPostsFramgmentActivity"></activity>
         
+        <activity android:name="com.photowall.ui.FollowerListActivity"></activity>
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_id" />
 	</application>
  
