--- a/project.properties
+++ b/project.properties
@@ -9,8 +9,9 @@
 #
 # To enable ProGuard to shrink and obfuscate your code, uncomment this (available properties: sdk.dir, user.home):
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
+proguard.config=proguard.cfg
 
 # Project target.
 target=android-17
-android.library.reference.1=..\\slidemenu
-android.library.reference.2=..\\viewpagerlibrary
+android.library.reference.1=../viewpagerlibrary
+android.library.reference.2=../slidemenu
