--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -39,6 +39,7 @@
 		android:icon="@drawable/ic_launcher"
 		android:label="@string/app_name" 
 		android:name="com.photowall.photowallcommunity.PhotoWallApplication"
+		android:theme="@style/AppTheme"
 		>
 		<!--  
 		<activity
